SERVER-68186 Reconcile index table metadata during startup if there is a mismatch to the index type (#29182)

GitOrigin-RevId: f39cc9d85529a16462f7128b64540a0dbe06c5a2