src/mongo/db/storage/wiredtiger/wiredtiger_index.h
@@ -234,9 +234,19 @@ protected:
      */
     KeyString::Version _handleVersionInfo(OperationContext* ctx,
                                           const std::string& uri,
+                                          StringData ident,
                                           const IndexDescriptor* desc,
                                           bool isLogged,
                                           bool isReadOnly);
+
+    /*
+     * Attempts to repair the data format version in the index table metadata if there is a mismatch
+     * to the index type during startup.
+     */
+    void _repairDataFormatVersion(OperationContext* opCtx,
+                                  const std::string& uri,
+                                  StringData ident,
+                                  const IndexDescriptor* desc);
 
     RecordId _decodeRecordIdAtEnd(const void* buffer, size_t size);
 
